@@ -175,6 +175,8 @@ public:
 	void process_midi(uint8_t *data, uint32_t size);
 	void process(float **ins, float **outs, uint32_t nframes);
 
+	virtual void updatePreset(bool bDirty) = 0;
+
 protected:
 
 	virtual void selectSample(int key) = 0;
